--- a/package.json
+++ b/package.json
@@ -73,497 +73,6 @@
     "example": "example",
     "test": "test"
   },
-  "dependencies": {
-    "anchor-markdown-header": "^0.5.7",
-    "ansi-align": "^2.0.0",
-    "ansi-escapes": "^4.2.1",
-    "ansi-regex": "^3.0.0",
-    "ansi-styles": "^3.2.1",
-    "any-observable": "^0.3.0",
-    "arg": "^4.1.1",
-    "argparse": "^1.0.10",
-    "arr-diff": "^4.0.0",
-    "arr-flatten": "^1.1.0",
-    "arr-union": "^3.1.0",
-    "array-find-index": "^1.0.2",
-    "array-union": "^1.0.2",
-    "array-uniq": "^1.0.3",
-    "array-unique": "^0.3.2",
-    "assertion-error": "^1.1.0",
-    "arrify": "^1.0.1",
-    "ast-types": "^0.13.2",
-    "assign-symbols": "^1.0.0",
-    "async-exit-hook": "^2.0.1",
-    "atob": "^2.1.2",
-    "babel-runtime": "^6.26.0",
-    "babel-code-frame": "^6.26.0",
-    "backbone": "^1.4.0",
-    "bail": "^1.0.4",
-    "balanced-match": "^1.0.0",
-    "base": "^0.11.2",
-    "boundary": "^1.0.1",
-    "boxen": "^1.3.0",
-    "brace-expansion": "^1.1.11",
-    "braces": "^2.3.2",
-    "buffer-from": "^1.1.1",
-    "builtin-modules": "^1.1.1",
-    "builtins": "^1.0.3",
-    "cachedir": "^2.2.0",
-    "cache-base": "^1.0.1",
-    "caller-path": "^2.0.0",
-    "caller-callsite": "^2.0.0",
-    "cacheable-request": "^6.1.0",
-    "callsites": "^3.1.0",
-    "camelcase": "^4.1.0",
-    "camelcase-keys": "^4.2.0",
-    "capture-stack-trace": "^1.0.1",
-    "chalk": "^2.4.2",
-    "chai": "^4.2.0",
-    "character-entities": "^1.2.3",
-    "character-entities-legacy": "^1.1.3",
-    "character-reference-invalid": "^1.1.3",
-    "chardet": "^0.7.0",
-    "check-error": "^1.0.2",
-    "ci-info": "^1.6.0",
-    "class-utils": "^0.3.6",
-    "cli-boxes": "^1.0.0",
-    "cli-truncate": "^0.2.1",
-    "cli-cursor": "^3.1.0",
-    "cli-width": "^2.2.0",
-    "clone-response": "^1.0.2",
-    "code-point-at": "^1.1.0",
-    "collapse-white-space": "^1.0.5",
-    "color-convert": "^1.9.3",
-    "collection-visit": "^1.0.0",
-    "commander": "^2.20.0",
-    "color-name": "^1.1.3",
-    "comment-json": "^1.1.3",
-    "concat-map": "^0.0.1",
-    "component-emitter": "^1.3.0",
-    "configstore": "^3.1.2",
-    "conventional-commit-types": "^2.1.1",
-    "convert-hrtime": "^2.0.0",
-    "copy-descriptor": "^0.1.1",
-    "core-js": "^2.6.9",
-    "core-util-is": "^1.0.2",
-    "cosmiconfig": "^5.2.1",
-    "create-error-class": "^3.0.2",
-    "cross-spawn": "^5.1.0",
-    "currently-unhandled": "^0.4.1",
-    "crypto-random-string": "^1.0.0",
-    "date-fns": "^1.30.1",
-    "debug": "^4.1.1",
-    "decamelize": "^1.2.0",
-    "decamelize-keys": "^1.1.0",
-    "decompress-response": "^3.3.0",
-    "dedent": "^0.7.0",
-    "decode-uri-component": "^0.2.0",
-    "deep-eql": "^3.0.1",
-    "deep-extend": "^0.6.0",
-    "defer-to-connect": "^1.0.2",
-    "del": "^4.1.1",
-    "define-property": "^2.0.2",
-    "detect-file": "^1.0.0",
-    "detect-indent": "^5.0.0",
-    "diff": "^4.0.1",
-    "doctrine": "^0.7.2",
-    "dom-serializer": "^0.1.1",
-    "domelementtype": "^1.3.1",
-    "domhandler": "^2.4.2",
-    "domutils": "^1.7.0",
-    "dot-prop": "^4.2.0",
-    "duplexer3": "^0.1.4",
-    "editorconfig": "^0.15.3",
-    "editorconfig-to-prettier": "^0.0.6",
-    "elegant-spinner": "^1.0.1",
-    "emoji-regex": "^6.1.3",
-    "end-of-stream": "^1.4.1",
-    "entities": "^1.1.2",
-    "error-ex": "^1.3.2",
-    "esprima": "^2.7.3",
-    "escape-string-regexp": "^1.0.5",
-    "esutils": "^2.0.2",
-    "execa": "^0.7.0",
-    "expand-brackets": "^2.1.4",
-    "expand-tilde": "^2.0.2",
-    "extend": "^3.0.2",
-    "extend-shallow": "^2.0.1",
-    "external-editor": "^3.1.0",
-    "extglob": "^2.0.4",
-    "fast-glob": "^3.0.4",
-    "fault": "^1.0.3",
-    "fastq": "^1.6.0",
-    "figures": "^3.0.0",
-    "fill-range": "^4.0.0",
-    "find-node-modules": "^2.0.0",
-    "find-root": "^1.1.0",
-    "find-up": "^3.0.0",
-    "findup-sync": "^3.0.0",
-    "for-in": "^1.0.2",
-    "format": "^0.2.2",
-    "fragment-cache": "^0.2.1",
-    "fs-exists-sync": "^0.1.0",
-    "fs-extra": "^7.0.1",
-    "fs.realpath": "^1.0.0",
-    "get-func-name": "^2.0.0",
-    "get-stdin": "^7.0.0",
-    "get-stream": "^3.0.0",
-    "get-value": "^2.0.6",
-    "git-config-path": "^1.0.1",
-    "git-user-name": "^2.0.0",
-    "git-username": "^1.0.0",
-    "github-url-from-git": "^1.5.0",
-    "glob": "^7.1.4",
-    "glob-parent": "^5.0.0",
-    "global-dirs": "^0.1.1",
-    "global-modules": "^1.0.0",
-    "global-prefix": "^1.0.2",
-    "globby": "^6.1.0",
-    "got": "^6.7.1",
-    "graceful-fs": "^4.1.15",
-    "handlebars": "^4.1.2",
-    "has-ansi": "^2.0.0",
-    "has-flag": "^3.0.0",
-    "has-value": "^1.0.0",
-    "has-yarn": "^2.1.0",
-    "has-values": "^1.0.0",
-    "homedir-polyfill": "^1.0.3",
-    "hosted-git-info": "^2.7.1",
-    "highlight.js": "^9.15.10",
-    "htmlparser2": "^3.9.2",
-    "http-cache-semantics": "^4.0.3",
-    "iconv-lite": "^0.4.24",
-    "import-fresh": "^3.1.0",
-    "import-lazy": "^2.1.0",
-    "imurmurhash": "^0.1.4",
-    "indent-string": "^3.2.0",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.3",
-    "ini": "^1.3.5",
-    "inquirer": "^7.0.0",
-    "interpret": "^1.2.0",
-    "ip-regex": "^4.1.0",
-    "is-accessor-descriptor": "^0.1.6",
-    "is-alphabetical": "^1.0.3",
-    "is-alphanumerical": "^1.0.3",
-    "is-arrayish": "^0.2.1",
-    "is-buffer": "^1.1.6",
-    "is-ci": "^1.2.1",
-    "is-decimal": "^1.0.3",
-    "is-data-descriptor": "^0.1.4",
-    "is-directory": "^0.3.1",
-    "is-descriptor": "^0.1.6",
-    "is-extendable": "^0.1.1",
-    "is-fullwidth-code-point": "^2.0.0",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.1",
-    "is-hexadecimal": "^1.0.3",
-    "is-installed-globally": "^0.1.0",
-    "is-npm": "^1.0.0",
-    "is-number": "^3.0.0",
-    "is-obj": "^1.0.1",
-    "is-observable": "^1.1.0",
-    "is-path-cwd": "^2.1.0",
-    "is-path-in-cwd": "^2.1.0",
-    "is-path-inside": "^1.0.1",
-    "is-plain-obj": "^1.1.0",
-    "is-plain-object": "^2.0.4",
-    "is-promise": "^2.1.0",
-    "is-retry-allowed": "^1.1.0",
-    "is-redirect": "^1.0.0",
-    "is-scoped": "^2.1.0",
-    "is-stream": "^1.1.0",
-    "is-url-superb": "^3.0.0",
-    "is-utf8": "^0.2.1",
-    "is-whitespace-character": "^1.0.3",
-    "is-windows": "^1.0.2",
-    "is-word-character": "^1.0.3",
-    "is-wsl": "^1.1.0",
-    "isarray": "^1.0.0",
-    "isexe": "^2.0.0",
-    "isobject": "^3.0.1",
-    "issue-regex": "^2.0.0",
-    "jquery": "^3.4.1",
-    "js-tokens": "^3.0.2",
-    "js-yaml": "^3.13.1",
-    "json-buffer": "^3.0.0",
-    "json-parse-better-errors": "^1.0.2",
-    "json-parser": "^1.1.5",
-    "jsonfile": "^4.0.0",
-    "keyv": "^3.1.0",
-    "kind-of": "^6.0.2",
-    "kleur": "^2.0.2",
-    "latest-version": "^3.1.0",
-    "lines-and-columns": "^1.1.6",
-    "listify": "^1.0.0",
-    "listr": "^0.14.3",
-    "listr-input": "^0.1.3",
-    "listr-silent-renderer": "^1.1.1",
-    "listr-update-renderer": "^0.5.0",
-    "listr-verbose-renderer": "^0.5.0",
-    "load-json-file": "^4.0.0",
-    "locate-path": "^3.0.0",
-    "lodash": "^4.17.11",
-    "lodash.map": "^4.6.0",
-    "lodash.zip": "^4.2.0",
-    "log-symbols": "^3.0.0",
-    "log-update": "^2.3.0",
-    "longest": "^2.0.1",
-    "loud-rejection": "^1.6.0",
-    "lowercase-keys": "^1.0.1",
-    "lru-cache": "^4.1.5",
-    "lunr": "^2.3.6",
-    "make-dir": "^1.3.0",
-    "make-error": "^1.3.5",
-    "map-age-cleaner": "^0.1.3",
-    "map-cache": "^0.2.2",
-    "map-obj": "^1.0.1",
-    "map-visit": "^1.0.0",
-    "markdown-escapes": "^1.0.3",
-    "marked": "^0.7.0",
-    "mem": "^4.3.0",
-    "meow": "^5.0.0",
-    "merge": "^1.2.1",
-    "merge2": "^1.2.4",
-    "micromatch": "^3.1.10",
-    "middleearth-names": "^1.1.0",
-    "mimic-fn": "^2.1.0",
-    "mimic-response": "^1.0.1",
-    "minimatch": "^3.0.4",
-    "minimist": "^1.2.0",
-    "minimist-options": "^3.0.2",
-    "mixin-deep": "^1.3.2",
-    "mkdirp": "^0.5.1",
-    "mrm-core": "^3.3.0",
-    "mrm-preset-default": "^1.11.0",
-    "mrm-task-codecov": "^1.0.3",
-    "mrm-task-contributing": "^1.1.0",
-    "mrm-task-editorconfig": "^1.1.0",
-    "mrm-task-gitignore": "^1.1.3",
-    "mrm-task-eslint": "^1.2.0",
-    "mrm-task-jest": "^1.2.4",
-    "mrm-task-license": "^1.2.3",
-    "mrm-task-lint-staged": "^1.4.1",
-    "mrm-task-package": "^1.1.2",
-    "mrm-task-prettier": "^1.2.5",
-    "mrm-task-readme": "^1.1.3",
-    "mrm-task-semantic-release": "^2.2.0",
-    "mrm-task-styleguidist": "^1.0.3",
-    "mrm-task-stylelint": "^2.0.3",
-    "mrm-task-travis": "^1.1.2",
-    "mrm-task-typescript": "^1.0.3",
-    "ms": "^2.1.2",
-    "mute-stream": "^0.0.8",
-    "nanomatch": "^1.2.13",
-    "neo-async": "^2.6.1",
-    "nested-error-stacks": "^2.0.1",
-    "nice-try": "^1.0.5",
-    "normalize-package-data": "^2.5.0",
-    "normalize-url": "^4.3.0",
-    "npm-name": "^5.5.0",
-    "npm-run-path": "^2.0.2",
-    "number-is-nan": "^1.0.1",
-    "object-assign": "^4.1.1",
-    "object-copy": "^0.1.0",
-    "object.pick": "^1.3.0",
-    "object-visit": "^1.0.1",
-    "once": "^1.4.0",
-    "onetime": "^5.1.0",
-    "open": "^6.4.0",
-    "opencollective-postinstall": "^2.0.2",
-    "optimist": "^0.6.1",
-    "os-homedir": "^1.0.2",
-    "os-tmpdir": "^1.0.2",
-    "ow": "^0.13.2",
-    "p-cancelable": "^1.1.0",
-    "p-defer": "^1.0.0",
-    "p-finally": "^1.0.0",
-    "p-is-promise": "^2.1.0",
-    "p-limit": "^2.2.0",
-    "p-locate": "^3.0.0",
-    "p-map": "^2.1.0",
-    "p-memoize": "^3.1.0",
-    "p-timeout": "^3.1.0",
-    "p-try": "^2.2.0",
-    "package-json": "^4.0.1",
-    "parent-module": "^1.0.1",
-    "parse-entities": "^1.2.2",
-    "parse-git-config": "^1.1.1",
-    "parse-github-url": "^1.0.2",
-    "parse-json": "^4.0.0",
-    "parse-passwd": "^1.0.0",
-    "path-exists": "^3.0.0",
-    "path-is-absolute": "^1.0.1",
-    "pascalcase": "^0.1.1",
-    "path-is-inside": "^1.0.2",
-    "path-key": "^2.0.1",
-    "path-parse": "^1.0.6",
-    "path-type": "^3.0.0",
-    "pathval": "^1.1.0",
-    "picomatch": "^2.0.7",
-    "pify": "^3.0.0",
-    "pinkie": "^2.0.4",
-    "pinkie-promise": "^2.0.1",
-    "pkg-dir": "^4.2.0",
-    "please-upgrade-node": "^3.2.0",
-    "posix-character-classes": "^0.1.1",
-    "prepend-http": "^1.0.4",
-    "private": "^0.1.8",
-    "process-nextick-args": "^2.0.0",
-    "progress": "^2.0.3",
-    "prop-ini": "^0.0.2",
-    "pseudomap": "^1.0.2",
-    "pump": "^3.0.0",
-    "rc": "^1.2.8",
-    "quick-lru": "^1.1.0",
-    "read-pkg": "^3.0.0",
-    "read-pkg-up": "^3.0.0",
-    "readable-stream": "^2.3.6",
-    "recast": "^0.18.2",
-    "readme-badger": "^0.3.0",
-    "rechoir": "^0.6.2",
-    "redent": "^2.0.0",
-    "regenerator-runtime": "^0.11.1",
-    "regex-not": "^1.0.2",
-    "registry-auth-token": "^3.4.0",
-    "registry-url": "^3.1.0",
-    "remark-frontmatter": "^1.3.1",
-    "remark-parse": "^5.0.0",
-    "remote-origin-url": "^1.0.0",
-    "repeat-element": "^1.1.3",
-    "repeat-string": "^1.6.1",
-    "replace-ext": "^1.0.0",
-    "requireg": "^0.1.8",
-    "resolve": "^1.7.1",
-    "resolve-dir": "^1.0.1",
-    "resolve-from": "^5.0.0",
-    "resolve-global": "^1.0.0",
-    "resolve-url": "^0.2.1",
-    "restore-cursor": "^3.1.0",
-    "responselike": "^1.0.2",
-    "ret": "^0.1.15",
-    "retry": "^0.12.0",
-    "reusify": "^1.0.4",
-    "right-pad": "^1.0.1",
-    "rimraf": "^2.6.3",
-    "run-node": "^1.0.0",
-    "run-async": "^2.3.0",
-    "run-parallel": "^1.1.9",
-    "rx-lite": "^4.0.8",
-    "rxjs": "^6.5.2",
-    "rx-lite-aggregates": "^4.0.8",
-    "safe-buffer": "^5.1.2",
-    "safe-regex": "^1.1.0",
-    "safer-buffer": "^2.1.2",
-    "scoped-regex": "^2.1.0",
-    "semver": "^5.7.0",
-    "semver-compare": "^1.0.0",
-    "semver-diff": "^2.1.0",
-    "semver-utils": "^1.1.4",
-    "set-value": "^2.0.1",
-    "shebang-command": "^1.2.0",
-    "shelljs": "^0.7.6",
-    "shebang-regex": "^1.0.0",
-    "signal-exit": "^3.0.2",
-    "sigmund": "^1.0.1",
-    "slash": "^3.0.0",
-    "slice-ansi": "^0.0.4",
-    "smpltmpl": "^1.0.2",
-    "snapdragon": "^0.8.2",
-    "snapdragon-node": "^2.1.1",
-    "snapdragon-util": "^3.0.1",
-    "source-map": "^0.6.1",
-    "source-map-resolve": "^0.5.2",
-    "source-map-support": "^0.5.13",
-    "source-map-url": "^0.4.0",
-    "spdx-correct": "^3.1.0",
-    "spdx-exceptions": "^2.2.0",
-    "spdx-expression-parse": "^3.0.0",
-    "spdx-license-ids": "^3.0.4",
-    "split": "^1.0.1",
-    "split-lines": "^2.0.0",
-    "split-string": "^3.1.0",
-    "sprintf-js": "^1.0.3",
-    "state-toggle": "^1.0.2",
-    "static-extend": "^0.1.2",
-    "string-width": "^2.1.1",
-    "string_decoder": "^1.1.1",
-    "strip-ansi": "^5.2.0",
-    "strip-bom": "^3.0.0",
-    "strip-eof": "^1.0.0",
-    "strip-indent": "^2.0.0",
-    "strip-json-comments": "^2.0.1",
-    "structured-source": "^3.0.2",
-    "supports-color": "^5.5.0",
-    "supports-hyperlinks": "^1.0.1",
-    "symbol-observable": "^1.2.0",
-    "term-size": "^1.2.0",
-    "terminal-link": "^1.3.0",
-    "through": "^2.3.8",
-    "time-span": "^3.1.0",
-    "timed-out": "^4.0.1",
-    "tlds": "^1.203.1",
-    "tmp": "^0.0.33",
-    "to-object-path": "^0.3.0",
-    "to-readable-stream": "^1.0.0",
-    "to-regex": "^3.0.2",
-    "to-regex-range": "^2.1.1",
-    "traverse": "^0.6.6",
-    "trim": "^0.0.1",
-    "trim-newlines": "^2.0.0",
-    "trim-trailing-lines": "^1.1.2",
-    "trough": "^1.0.4",
-    "tslib": "^1.10.0",
-    "tsutils": "^2.29.0",
-    "type-detect": "^4.0.8",
-    "type-fest": "^0.5.2",
-    "typedoc-default-themes": "^0.6.0",
-    "uglify-js": "^3.6.0",
-    "underscore": "^1.8.3",
-    "unherit": "^1.1.2",
-    "unified": "^6.2.0",
-    "union-value": "^1.0.1",
-    "unique-random": "^1.0.0",
-    "unique-random-array": "^1.0.0",
-    "unique-string": "^1.0.0",
-    "unist-util-is": "^2.1.2",
-    "unist-util-remove-position": "^1.1.2",
-    "unist-util-stringify-position": "^1.1.2",
-    "unist-util-visit": "^1.4.0",
-    "unist-util-visit-parents": "^2.1.0",
-    "universalify": "^0.1.2",
-    "unset-value": "^1.0.0",
-    "unzip-response": "^2.0.1",
-    "update-notifier": "^2.5.0",
-    "update-section": "^0.3.3",
-    "urix": "^0.1.0",
-    "url-parse-lax": "^1.0.0",
-    "url-regex": "^5.0.0",
-    "use": "^3.1.1",
-    "user-home": "^2.0.0",
-    "user-meta": "^1.0.0",
-    "util-deprecate": "^1.0.2",
-    "validate-npm-package-license": "^3.0.4",
-    "validate-npm-package-name": "^3.0.0",
-    "variable-diff": "^1.1.0",
-    "vfile": "^2.3.0",
-    "vfile-location": "^2.0.4",
-    "vfile-message": "^1.1.1",
-    "webpack-merge": "^4.2.1",
-    "which": "^1.3.1",
-    "widest-line": "^2.0.1",
-    "word-wrap": "^1.2.3",
-    "wordwrap": "^0.0.3",
-    "wrap-ansi": "^3.0.1",
-    "wrappy": "^1.0.2",
-    "write-file-atomic": "^2.4.2",
-    "x-is-string": "^0.1.0",
-    "xdg-basedir": "^3.0.0",
-    "xtend": "^4.0.1",
-    "yallist": "^2.1.2",
-    "yargs-parser": "^10.1.0",
-    "yn": "^3.1.1"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/poppinss/manager.git"
@@ -571,5 +80,6 @@
   "bugs": {
     "url": "https://github.com/poppinss/manager/issues"
   },
-  "homepage": "https://github.com/poppinss/manager#readme"
+  "homepage": "https://github.com/poppinss/manager#readme",
+  "dependencies": {}
 }
