--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "mrm": "mrm --preset=@adonisjs/mrm-preset",
     "pretest": "npm run lint",
     "test": "node japaFile.js",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint . --ext=.ts",
     "clean": "del build",
     "compile": "npm run lint && npm run clean && tsc",
     "build": "npm run compile && typedoc --theme markdown --excludePrivate --HideSources && git add docs",
@@ -21,23 +21,23 @@
   "author": "virk,poppinss",
   "license": "MIT",
   "devDependencies": {
-    "@adonisjs/mrm-preset": "^2.1.0",
-    "@types/node": "^12.7.5",
+    "@adonisjs/mrm-preset": "^2.2.3",
+    "@types/node": "^12.12.21",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.0.2",
     "del-cli": "^3.0.0",
     "doctoc": "^1.4.0",
-    "husky": "^3.0.5",
+    "eslint": "^6.7.2",
+    "eslint-plugin-adonis": "^1.0.4",
+    "husky": "^3.1.0",
     "japa": "^3.0.1",
-    "mrm": "^1.2.2",
-    "np": "^5.1.0",
-    "ts-node": "^8.4.1",
-    "tslint": "^5.20.0",
-    "tslint-eslint-rules": "^5.4.0",
-    "typedoc": "^0.15.0",
+    "mrm": "^2.0.2",
+    "np": "^5.2.1",
+    "ts-node": "^8.5.4",
+    "typedoc": "^0.15.5",
     "typedoc-plugin-external-module-name": "^2.1.0",
-    "typedoc-plugin-markdown": "^2.2.4",
-    "typescript": "^3.6.3"
+    "typedoc-plugin-markdown": "^2.2.14",
+    "typescript": "^3.7.3"
   },
   "nyc": {
     "exclude": [
