--- a/config.json
+++ b/config.json
@@ -1,9 +1,7 @@
 {
-  "core": false,
-  "ts": true,
-  "license": "MIT",
-  "services": [
-    "circleci"
-  ],
-  "minNodeVersion": "12.0.0"
+	"core": false,
+	"ts": true,
+	"license": "MIT",
+	"services": ["circleci"],
+	"minNodeVersion": "12.0.0"
 }
