ci: use github actions and remove circleci

--- a/package.json
+++ b/package.json
@@ -33,8 +33,6 @@
 		"@adonisjs/mrm-preset": "^4.1.0",
 		"@adonisjs/require-ts": "^2.0.4",
 		"@types/node": "^15.6.1",
-		"commitizen": "^4.2.4",
-		"cz-conventional-changelog": "^3.3.0",
 		"del-cli": "^3.0.1",
 		"doctoc": "^2.0.0",
 		"eslint": "^7.27.0",
@@ -57,12 +55,6 @@
 			".ts"
 		]
 	},
-	"husky": {
-		"hooks": {
-			"pre-commit": "doctoc README.md --title='## Table of contents' && git add README.md",
-			"commit-msg": "node ./node_modules/@adonisjs/mrm-preset/validateCommit/conventional/validate.js"
-		}
-	},
 	"config": {
 		"commitizen": {
 			"path": "cz-conventional-changelog"
@@ -84,6 +76,5 @@
 	"bugs": {
 		"url": "https://github.com/poppinss/manager/issues"
 	},
-	"homepage": "https://github.com/poppinss/manager#readme",
-	"dependencies": {}
+	"homepage": "https://github.com/poppinss/manager#readme"
 }
