--- a/config.json
+++ b/config.json
@@ -1,12 +1,13 @@
 {
-	"core": true,
+	"core": false,
 	"license": "MIT",
 	"services": [
-		"circleci"
+		"github-actions"
 	],
 	"minNodeVersion": "14.15.4",
 	"probotApps": [
 		"stale",
 		"lock"
-	]
+	],
+	"runGhActionsOnWindows": false
 }
